syntax = "proto3";

package devmodetest.v1;

message DevModeRequest {
  string service = 1;
}

message DevModeResponse {
  enum Status {
    UNKNOWN = 0;
    NOT_SERVING = 1;
    TEST_ONE = 2;
  }
  Status status = 1;
}

service DevModeService {
  rpc Check(DevModeRequest) returns (DevModeResponse);
}